// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip snapshots should adjust correct placement 1`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip Tooltip--visible"
    style="left: calc(0px - 7px); top: calc(0px + 0px - 14px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--left-start Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should be visible after enter mouse & invisible after leave 1`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 0px + 0px); top: calc(0px - 0px - 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should change position after mouse wheel 1`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 0px + 0px); top: calc(0px - 0px - 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 1`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 17px + 0px); top: calc(0px - 0px - 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-start Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 2`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 0px + 0px); top: calc(0px - 0px - 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 3`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px + 17px - 0px + 0px); top: calc(0px - 0px - 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-end Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 4`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 14px + 0px); top: calc(0px + 0px + 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--bottom-start Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 5`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 0px + 0px); top: calc(0px + 0px + 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--bottom-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 6`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px + 14px - 0px + 0px); top: calc(0px + 0px + 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--bottom-end Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 7`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 7px); top: calc(0px + 0px - 14px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--left-start Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 8`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 7px); top: calc(0px + 0px - 0px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--left-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 9`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px - 7px); top: calc(0px + 0px - 0px + 14px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--left-end Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 10`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px + 7px); top: calc(0px + 0px - 14px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--right-start Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 11`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px + 7px); top: calc(0px + 0px - 0px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--right-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with diffrent positions 12`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
    style="left: calc(0px + 7px); top: calc(0px + 0px - 0px + 14px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--right-end Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should render with passed container id 1`] = `<DocumentFragment />`;

exports[`Tooltip snapshots should set tooltip position horizontal automatically after enter 1`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tooltip snapshots should set tooltip position vertical automatically after enter 1`] = `
<DocumentFragment>
  <div
    data-test-tooltip=""
  >
    ?
  </div>
  <div
    class="Tooltip Tooltip--visible"
    style="left: calc(0px + 17px - 0px + 0px); top: calc(0px - 0px - 7px);"
  >
    <div
      class="Tooltip__content"
    >
      content
      <div
        class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-end Icon Icon--neutral1"
        data-test-icon="carrot-down"
        height="14"
        name="CarrotDown"
        width="10"
      />
    </div>
  </div>
</DocumentFragment>
`;
